--- a/app/templates/reminders/create.html
+++ b/app/templates/reminders/create.html
@@ -64,7 +64,7 @@
         <option value="one_time">One-time Only</option>
         <option value="custom">Custom Interval</option>
       </select>
-      <small class="form-hint">One-time reminders will be archived after completion</small>
+      <small class="form-hint">One-time reminders will become inactive after completion</small>
     </div>
 
     <!-- Custom Interval (hidden by default) -->
